Fix button spacing in section intro. Fixes #3

--- a/src/stylesheets/pageparts/_section-intro.sass
+++ b/src/stylesheets/pageparts/_section-intro.sass
@@ -15,20 +15,21 @@
     p
       margin-bottom: 0
 
-  &__button,
-  &__text-link
-    @media (min-width: $tablet)
-      margin: 0 $textSpacer / 2
+  &__buttons
+    align-items: center
+    display: flex
+    gap: $textSpacer
+    justify-content: center
+    margin: $baseline 0 ($baseline * .5)
+
+    @media (max-width: $maxTablet)
+      flex-direction: column
 
   &__button
-    +clamp('margin-top', $spacerMobile , $spacerDesktop / 2, $largeMobile, $desktop)
-
     @media (max-width: $maxTablet)
       width: 100%
 
   &__text-link
-    +clamp('margin-top', $spacerMobile , $spacerDesktop / 2, $largeMobile, $desktop)
-    
     @media (max-width: $maxTablet)
       display: inline-block
       margin-top: $textSpacer
